# VoteSystem

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-03-10-b76de57d07d3_good_one.py  2024-03-10_d061ba67a828_gooder.py
src/: config.py  database.py  main.py
src/actions/: actions.py  schemas.py
src/auth/: db.py  manager.py  models.py  schemas.py  utils.py
src/polls/: models.py  router.py  schemas.py  utils.py
src/polls/choice/: action.py  models.py  router.py  schemas.py
src/polls/image/: action.py  models.py  router.py  schemas.py
src/polls/poll/: action.py  models.py  router.py  schemas.py
src/polls/question/: action.py  models.py  router.py  schemas.py
src/polls/vote/: action.py  models.py  router.py  schemas.py
